--- a/index.html
+++ b/index.html
@@ -4,129 +4,114 @@
     <title>Главная</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body class="page-body">
-    <header class="page-header">
-      <nav class="navigation">
-        <a class="navigation__btn-close" href="#">
-          <img class="navigation__img-close" src="">
-        </a>
-        <ul class="navigation__list">
-          <li class="navigation__item  navigation__item--active">
-            <a class="navigation__link" href="#">Информация</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">Оставить отзыв</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">Блог шерифа</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">Гостиницы</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="logo">
-        <a href="#"><img src=""></a>    
-      </div>
-      <a class="menu-toggle__link" href="#">
-        <img class="menu-toggle__img" src="#">
-      </a>
-      <div class="background-sedona">
-        <img href="background-sedona__img" src="#" alt="">
-      </div>
-    </header>
-    <main class="page-main">
-      <div class="page-main__center-wrapper">
+    <div class="center-wrapper">
+      <header class="page-header">
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item  navigation__item--active"><a class="navigation__link" href="#">Информация</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="#">Оставить отзыв</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="#">Блог шерифа</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a>
+            </li>
+          </ul>
+         <div class="logo">
+          <a href="#"><img src="img/logo.png" width="138" height="70" alt="Седона"></a>
+          </div>
+        </nav>
+        <div class="intro">
+          <div class="intro__block intro__block--welcome"><img class="intro__image" src="img/intro-welcome.png" alt="Welcome to the gorgeous" width="196" height="66"></div>
+          <div class="intro__block intro__block--sedona"><img class="intro__image" src="img/intro-sedona-title.png" alt="Sedona" width="280" height="48"></div>
+          <div class="intro__block intro__block--grandcanyon"><img class="intro__image" src="img/intro-grandcanyon.png" alt="Because the Grand Canyon sucks!" width="197" height="54"></div>
+        </div>
+      </header>
+      <main class="page-main">
         <section class="promo">
-          <h1 class="promo__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <h1 class="promo__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1> 
           <p class="promo__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </section>
-        <section class="reason reason--color">
-          <div class="reason__title">Настоящий городок</div>
-          <div class="reason__number-wrap">  
-            <span class="reason__number">№1</span>
+        <section class="reason">
+          <div class="reason__text-block reason--color reason--with-top-line">
+            <div class="reason__title reason__title--for-color-block reason__title--with-top-line">Настоящий городок</div>
+            <p class="reason__number">&mdash; №1 &mdash;</p>
+            <p class="reason__text">Седона не аттракцион для туристов, там течет своя жизнь</p> 
           </div>
-          <p class="reason__text">Седона не аттракцион для туристов, там течет своя жизнь</p> 
           <div class="reason__image-wrap">
-            <img class="reason__image"src="#">
+            <img class="reason__image"src="img/reason-one.png" alt="Настоящий городок" width="320" height="256">
           </div>        
         </section>  
         <div class="advantages">
-          <div class="advantages-item">
-            <img class="advantages-item__img" src="#">
-            <div class="advantages-item__title">Жилье</div>
-            <p class="advantages-item__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          <div class="advantages__item">
+            <img class="advantages__img" src="img/icon-accomodation.png" alt="Жилье" width="37" height="37">
+            <div class="advantages__title">Жилье</div>
+            <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </div>
-          <div class="advantages-item">
-            <img class="advantages-item__img" src="#">
-            <div class="advantages-item__title">Еда</div>
-            <p class="advantages-item__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>  
+          <div class="advantages__item">
+            <img class="advantages__img" src="img/icon-food.png" alt="Еда" width="37" height="35">
+            <div class="advantages__title">Еда</div>
+            <p class="advantages__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>  
           </div>
-          <div class="advantages-item">
-            <img class="advantages-item__img" src="#">
-            <div class="advantages-item__title">Сувениры</div>
-            <p class="advantages-item__text">Не только китайского, но и местного производства!</p>  
+          <div class="advantages__item">
+            <img class="advantages__img" src="img/icon-souvenirs.png" alt="Сувениры" width="32" height="38">
+            <div class="advantages__title">Сувениры</div>
+            <p class="advantages__text">Не только китайского, но и местного производства!</p>  
           </div>
         </div>
-        <section class="reason reason--color">
-          <div class="reason__title">Там есть мост дъявола</div>
-          <div class="reason__number-wrap">
-            <span class="reason__number">№2</span>
+        <section class="reason">
+          <div class="reason__text-block reason--color">
+            <div class="reason__title  reason__title--for-color-block">Там есть мост дъявола</div>
+            <p class="reason__number">&mdash; №2 &mdash;</p>
+            <p class="reason__text">Да! по нему можно пройти! если, конечно, вы осмелитесь</p>  
           </div>
-          <p class="reason__text">Да! по нему можно пройти! если, конечно, вы осмелитесь</p>  
           <div class="reason__image-wrap">
-            <img class="reason__image" src="">
+            <img class="reason__image" src="img/reason-two.png" alt="Мост дъявола" width="320" height="260">
           </div>       
         </section>
         <section class="reason reason--colorless">
           <div class="reason__title">Небольшая площадь</div>
           <div class="reason__number-wrap">
-            <span class="reason__number">№3</span>
+            <span class="reason__number">&mdash; №3 &mdash; </span>
           </div>
           <p class="reason__text">Все достопримечательности находятся очень близко</p>     
         </section>
         <section class="reason reason--colorless">
           <div class="reason__title">Красивая дорога</div>
           <div class="reason__number-wrap">
-            <span class="reason__number">№4</span>
+            <span class="reason__number">&mdash; №4 &mdash;</span>
           </div>
           <p class="reason__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </section>  
         <section class="reason reason--colorless">
           <div class="reason__title">Мало туристов</div>
           <div class="reason__number-wrap">
-            <span class="reason__number">№5</span>
+            <span class="reason__number">&mdash; №5 &mdash;</span>
           </div>
           <p class="reason__text">Большинство едет в Гранд Каньон и толпится там.</p>
         </section>
-        <div class="promo">
-          <div class="promo__title">Заинтересовались?</div>
-          <p class="promo__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <div class="order">
+          <div class="order__title">Заинтересовались?</div>
+          <p class="order__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="order__search" href="#">Найти гостиницу</a>
         </div>  
-        <a class="search-hotel" href="#">Найти гостиницу</a>
-        <div class="map"></div>
-      </div>
-    </main>
-    <footer class="page-footer">
-      <div class="hashtag">#visitsedona</div>
-      <div class="social-links">
-        <a href="#" class="social-link social-link__tw">
-          <i class="social-link__icon-twitter"></i>
-        </a>
-        <a href="#" class="social-link__link social-link__fb">
-          <i class="social-link__icon-facebook"></i>
-        </a>
-        <a href="#" class="social-link__link social-link__youtube">
-          <i class="social-link__icon-youtube"></i>
-        </a>
-      </div>
-      <div class="page-footer__copyright">
-        Разработано 
-        <a class="page-footer__copyright-link" href="#">
-          <img class="page-footer__logo" src="img/logo-html-academy.png" alt="htmlacademy">
-        </a>
-      </div>
-    </footer> 
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8369633064!2d-111.79513845000002!3d34.854378399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1442959004701" width="320" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </main>
+      <footer class="page-footer">
+        <div class="hashtag">#visitsedona</div>
+        <div class="social-link">
+          <a href="#" class="social-link__item social-link__tw"></a>
+          <a href="#" class="social-link__item social-link__fb"></a>
+          <a href="#" class="social-link__item social-link__youtube"></a>
+        </div>
+        <div class="page-footer__copyright">
+          Разработано 
+          <a class="page-footer__copyright-link" href="#"><img class="page-footer__logo" src="img/htmlacademy.png" alt="htmlacademy" width="27" height="34"></a>
+        </div>
+      </footer> 
+    </div>
   </body> 
 </html>
